tests/snapshots/walker__flat_nested_flat_remove_toplevel_input_nested.snap
---
source: tests/walker.rs
expression: change.to_string()
info:
  flake_nix: ""
  changes:
    - Remove:
        id: poetry2nix.nixpkgs
---
{
  description = "flat nested flat test";

  inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
  inputs.flake-utils.url = "github:numtide/flake-utils/master";
  inputs.poetry2nix = {
    inputs.flake-utils.follows = "flake-utils";
    url = "github:nix-community/poetry2nix/master";
  };

  outputs =
    {
      self,
      nixpkgs,
      flake-utils,
      poetry2nix,
    }:
    { };
}

