tests/snapshots/walker__one_level_nesting_flat.snap
---
source: tests/walker.rs
expression: walker.inputs
info:
  flake_nix: ""
  changes: []
---
"Some(Context { level: [\"crane\"] })flake-utils":
  id: "Some(Context { level: [\"crane\"] })flake-utils"
  flake: true
  url: "\"flake-utils\""
  follows: []
"Some(Context { level: [\"crane\"] })nixpkgs":
  id: "Some(Context { level: [\"crane\"] })nixpkgs"
  flake: true
  url: "\"nixpkgs\""
  follows: []
"Some(Context { level: [\"crane\"] })rust-overlay":
  id: "Some(Context { level: [\"crane\"] })rust-overlay"
  flake: true
  url: "\"rust-overlay\""
  follows: []
"Some(Context { level: [\"rust-overlay\"] })flake-utils":
  id: "Some(Context { level: [\"rust-overlay\"] })flake-utils"
  flake: true
  url: "\"flake-utils\""
  follows: []
"Some(Context { level: [\"rust-overlay\"] })nixpkgs":
  id: "Some(Context { level: [\"rust-overlay\"] })nixpkgs"
  flake: true
  url: "\"nixpkgs\""
  follows: []
crane:
  id: crane
  flake: true
  url: "\"github:ipetkov/crane\""
  follows: []
flake-utelinos:
  id: flake-utelinos
  flake: true
  url: "\"github:numtide/flake-utils\""
  follows: []
nixpkgs:
  id: nixpkgs
  flake: true
  url: "\"github:nixos/nixpkgs/nixos-unstable\""
  follows: []
rust-overlay:
  id: rust-overlay
  flake: true
  url: "\"github:oxalica/rust-overlay\""
  follows: []

