tests/snapshots/walker__root_remove_toplevel_input_multiple.snap
---
source: tests/walker.rs
expression: change.to_string()
info:
  flake_nix: ""
  changes:
    - Remove:
        id: crane
---
{
  description = "Manage your flake inputs comfortably.";

  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";

    flake-utelinos.url = "github:numtide/flake-utils";

    rust-overlay = {
      url = "github:oxalica/rust-overlay";
      inputs.nixpkgs.follows = "nixpkgs";
      inputs.flake-utils.follows = "flake-utils";
    };
  };

  outputs = _: { };
}

